...
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_clicker_cards_multipoints" />

    <!-- The floating action button which displays the "start" button" and the "new click" button" -->
    <com.sa90.materialarcmenu.ArcMenu
        android:id="@+id/fabAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:menu_scr="@drawable/menu_arc"
        app:menu_open="arc_left"
        app:menu_radius="150dp">
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_stop_process"/>

        <!-- Select a point on the screen -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSelectPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_add_points"/>

        <!-- Requests SU grant -->
        <android.support.design.widget.FloatingActionButton
...
