...
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_label_text_size"
            android:text="@string/widget_xy_coordinates"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/sPointsToClick"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/widget_label_text_size"
            android:spinnerMode="dialog"
            android:background="@null"
...
