...
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorMisterGrey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".views.ClickerActivity"
        android:id="@+id/clickerActivityMainLayout">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
...
